policies/selinux-user-containers.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: check-selinux-user-containers
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE","UPDATE"]
        resources: ["pods"]
  validations:
    - expression: >
        object.spec.containers.all(c,
          !has(c.securityContext) ||
          !has(c.securityContext.seLinuxOptions) ||
          !has(c.securityContext.seLinuxOptions.user) ||
          c.securityContext.seLinuxOptions.user == ""
        )
      message: >
        spec.containers[*].securityContext.seLinuxOptions.user must be undefined or an empty string ("").
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-selinux-user-containers-namespace-optout-warn
spec:
  policyName: check-selinux-user-containers
  validationActions:
    - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: validating-admission-policies.kolteq.com/warn
          operator: In
          values: ["baseline","restricted"]
        - key: validating-admission-policies.kolteq.com/selinux-user-containers
          operator: NotIn
          values: ["false"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-selinux-user-containers-namespace-optin-warn
spec:
  policyName: check-selinux-user-containers
  validationActions:
    - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: selinux-user-containers.validating-admission-policies.kolteq.com/warn
          operator: In
          values: ["true"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-selinux-user-containers-namespace-optout-audit
spec:
  policyName: check-selinux-user-containers
  validationActions:
    - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: validating-admission-policies.kolteq.com/audit
          operator: In
          values: ["baseline","restricted"]
        - key: validating-admission-policies.kolteq.com/selinux-user-containers
          operator: NotIn
          values: ["false"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-selinux-user-containers-namespace-optin-audit
spec:
  policyName: check-selinux-user-containers
  validationActions:
    - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: selinux-user-containers.validating-admission-policies.kolteq.com/audit
          operator: In
          values: ["true"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-selinux-user-containers-namespace-optout-deny
spec:
  policyName: check-selinux-user-containers
  validationActions:
    - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: validating-admission-policies.kolteq.com/enforce
          operator: In
          values: ["baseline","restricted"]
        - key: validating-admission-policies.kolteq.com/selinux-user-containers
          operator: NotIn
          values: ["false"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-selinux-user-containers-namespace-optin-deny
spec:
  policyName: check-selinux-user-containers
  validationActions:
    - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: selinux-user-containers.validating-admission-policies.kolteq.com/enforce
          operator: In
          values: ["true"]
